Fix object cannot be serialized (Now replace map with set)
